<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- self defined "translations" -->
    <string name="soft_boiled">Soft Boiled</string>
    <string name="hard_boiled">Hard Boiled</string>
    <string name="smiling">Smiling</string>
    <string name="start_button">start</string>
    <string name="stop_button">start</string>
    <string name="chose_egg_setting_text">Chose egg setting</string>
    <string name="egg_setting_not_selected">Egg setting not selected</string>
    <string name="stopped_timer">Timer Stopped</string>
    <string name="starter_timer">Timer Started</string>
    <string name="ready_timer">Timer Ready</string>
    <string name="timer_text">Start</string>
    <string name="timer_start_text">Start</string>
    <string name="timer_pause_text">Pause</string>
    <string name="timer_resume_text">Resume</string>
    <string name="reset_button">Reset</string>
    <string name="egg_watch_time_format">%02d:%02d</string>
</resources>