<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.mart610k.eggwatch.FirstFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/eggText_ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/chose_egg_setting_text"
            android:textSize="25sp"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/eggTypeButton_ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        app:layout_constraintTop_toBottomOf="@+id/eggText_ConstraintLayout"
        app:layout_constraintVertical_bias="0.5"
        >

        <ImageButton
            android:id="@+id/smiling_button"
            android:layout_width="125dp"
            android:layout_height="150dp"
            android:width="5dp"
            android:height="5dp"
            android:onClick="onButtonSmilingClicked"
            android:text="@string/smiling"
            android:src="@drawable/ic_medium"
            android:scaleType="fitCenter"
            android:background="?android:selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/hard_boiled_button"
            app:layout_constraintStart_toEndOf="@id/soft_boiled_button"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageButton
            android:id="@+id/hard_boiled_button"
            android:onClick="onButtonHardBoiledClicked"
            android:layout_width="125dp"
            android:layout_height="150dp"
            android:width="5dp"
            android:height="5dp"
            android:text="@string/hard_boiled"
            android:src="@drawable/ic_hard"
            android:scaleType="fitCenter"
            android:background="?android:selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/smiling_button"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageButton
            android:id="@+id/soft_boiled_button"
            android:onClick="onButtonSoftBoiledClicked"
            android:layout_width="125dp"
            android:layout_height="150dp"
            android:width="5dp"
            android:height="5dp"
            android:text="@string/soft_boiled"
            android:src="@drawable/ic_soft"
            android:scaleType="fitCenter"
            android:background="?android:selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/smiling_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/timer_text"
        app:layout_constraintTop_toBottomOf="@+id/eggTypeButton_ConstraintLayout"
        >

        <TextView
            android:id="@+id/current_status_textview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/egg_setting_not_selected"
            android:gravity="center_vertical|center_horizontal"
            android:textStyle="bold"
            android:textSize="35sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/Current_Timer_TextView"
            />

        <TextView
            android:id="@+id/Current_Timer_TextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="00:00"
            android:gravity="center_vertical|center_horizontal"
            android:textStyle="bold"
            android:textSize="35sp"
            app:layout_constraintTop_toBottomOf="@id/current_status_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/start_stop_button"
        android:text="@string/timer_start_text"
        android:width="5dp"
        android:height="5dp"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:enabled="false"
        android:onClick="start_stopTimerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.90"
        app:layout_constraintVertical_weight="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_text"
        app:layout_constraintEnd_toStartOf="@id/reset_button"



        />

    <Button
        android:id="@+id/reset_button"
        android:text="@string/reset_button"
        android:width="5dp"
        android:height="5dp"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.90"
        app:layout_constraintVertical_weight="0.50"
        app:layout_constraintStart_toEndOf="@id/start_stop_button"
        android:onClick="resetButton"
        app:layout_constraintTop_toBottomOf="@+id/timer_text"

        />


</androidx.constraintlayout.widget.ConstraintLayout>